# Zylith

./: .gitignore  README.md  TOOLS_AND_TECHNOLOGIES.md  note.md
.claude/: settings.json
.github/workflows/: ci.yml  circuits.yml
asp/: Cargo.toml  README.md  start.sh
asp/src/: abi.rs  blockchain.rs  calldata.rs  commitment.rs  main.rs  proof.rs  syncer.rs
asp/src/abis/: erc20-abi.json  zylith-abi.json
circuits/: generate_proof_keys.sh  proof_script_1766861888677913151.js  proof_script_1766896184387207874.js  proof_script_1766978629003488834.js
circuits-noir/: Noir_and_Circom_Comparison.md  README.md  VERIFICATION.md
circuits-noir/compute_values/: Nargo.toml  Prover.toml
circuits-noir/lp_burn/: Nargo.toml  Prover.toml
circuits-noir/lp_mint/: Nargo.toml  Prover.toml
circuits-noir/membership/: Nargo.toml  Prover.toml  compute_test_values.sh  test_circuit.sh
circuits-noir/swap/: Nargo.toml  Prover.toml
circuits-noir/withdraw/: Nargo.toml  Prover.toml
circuits/membership_verifier/: .tool-versions  Scarb.toml
circuits/scripts/: finalize_verifiers.sh  generate_proof_keys.sh  test_position_commitment_direct.js  test_position_commitment_fixture.js
circuits/swap_verifier/: Scarb.toml
docs/: README.md
frontend/: README.md  jest.config.js  jest.json.mock.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.ts
scripts/: calculate_position_commitment.js
zylith/: CONTRACT_ADDRESS.md  README.md  Scarb.toml  deployment_devnet_20251228_191103.json  deployment_sepolia_20260117_134421.json  snfoundry.toml
(+123 files in other folders)
