[package]
name = "zylith-asp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
starknet = "=0.10.0"  # Fijar versión exacta para evitar 0.11
starknet-crypto = "0.6"  # Para pedersen hash
light-poseidon = "0.2"
ark-bn254 = "0.4"
ark-ff = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
url = "2.5"
once_cell = "1.19"
rand = "0.8"
hex = "0.4"
anyhow = "1.0"